# oai-pmh

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  integration-tests.yml
docs/pdoc/: index.html  oai_pmh_client.html  search.js
docs/pdoc/oai_pmh_client/: client.html
src/oai_pmh_client/: __init__.py  client.py  exceptions.py  models.py
src/oai_pmh_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py
tests/data/: error_bad_argument.xml  list_records_final.xml  list_records_resumption.xml
