[project]
name = "oai-pmh-client"
version = "0.1.0"
description = "A modern Python client for OAI-PMH (Open Archives Initiative Protocol for Metadata Harvesting)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
